--- a/GluWebsite/Web.config
+++ b/GluWebsite/Web.config
@@ -17,6 +17,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="GluServiceUrl" value="http://localhost:8080/gluService"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
