--- a/GluService/GluServiceLibrary.csproj
+++ b/GluService/GluServiceLibrary.csproj
@@ -52,9 +52,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\GluServiceLibrary.Interfaces\GluServiceLibrary.Interfaces.csproj">
+    <ProjectReference Include="..\GluServiceLibrary.Interfaces\GluServiceLibrary.Utils.csproj">
       <Project>{7f2bec84-55dd-4380-878a-d622faa1ab57}</Project>
-      <Name>GluServiceLibrary.Interfaces</Name>
+      <Name>GluServiceLibrary.Utils</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
