--- a/GluServiceHost/GluServiceHost.csproj
+++ b/GluServiceHost/GluServiceHost.csproj
@@ -49,6 +49,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\GluServiceLibrary.Interfaces\GluServiceLibrary.Utils.csproj">
+      <Project>{7f2bec84-55dd-4380-878a-d622faa1ab57}</Project>
+      <Name>GluServiceLibrary.Utils</Name>
+    </ProjectReference>
     <ProjectReference Include="..\GluService\GluServiceLibrary.csproj">
       <Project>{15b3e0d2-6217-493a-a690-158c497f5318}</Project>
       <Name>GluServiceLibrary</Name>
