--- a/GluServiceLibrary.Interfaces/GluServiceLibrary.Utils.csproj
+++ b/GluServiceLibrary.Interfaces/GluServiceLibrary.Utils.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
@@ -41,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GluServiceFactory.cs" />
     <Compile Include="IGluService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
